añadiendo js y modifico inicio

--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
     <!---------------------- SECCION INICIO --------------->
     <section class="inicio">
       <div class="info">
+        <h2>BIENVENIDOS A AZAHARA SPA</h2>
         <h4>
-          DEJÁ TU SALUD Y BELLEZA <br />
-          EN MANOS DE PROFESIONALES
+          EL CUIDADO DE LA PIEL <br />
+          NOS MOTIVA A SER MEJORES PERSONAS
         </h4>
-        <p>Te cuidamos en todo momento</p>
+        <p>Veni a conocernos en pleno centro de San Juan</p>
       </div>
+
+      <button id="btn-inicio">Welcome</button>
     </section>
 
     <!---------------------- SECCION PRODUCTOS --------------->
@@ -192,4 +195,6 @@
       </div>
     </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="index.js"></script>
 </html>
