--- a/index.html
+++ b/index.html
@@ -246,9 +246,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./javascript/validaciones.js"></script>
-    <script src="./javascript/productos.js"></script>
-    <script src="./javascript/cartService.js"></script>
-    <script src="./javascript/index.js" defer></script>
+    <script src="./javascript/index.js" type="module"></script>
   </body>
 </html>
