arreglos en js y responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="./img/burguer-icon.png" alt="menu" id="burguer-menu" />
       </header>
       <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5492644038158">
+        <a href="https://api.whatsapp.com/send?phone=5492645754772">
           <img src="./img/WhatsApp-Logo.svg" alt="logo-wsp" id="wsp-img" />
         </a>
       </div>
@@ -181,20 +181,18 @@
           </div>
         </div>
         <form action="" class="formulario" id="form">
-          <div class="fila1">
-            <div class="col">
-              <input type="text" id="nombre" placeholder="Nombre" />
-              <p></p>
-            </div>
-            <div class="col">
-              <input type="text" id="apellido" placeholder="Apellido" />
-              <p></p>
-            </div>
-          </div>
           <div class="fila">
-            <input type="email" id="email" placeholder="Email" />
+            <input type="text" id="nombre" placeholder="Nombre" />
             <p></p>
-          </div>
+        </div>
+        <div class="fila">
+            <input type="text" id="apellido" placeholder="Apellido" />
+            <p></p>
+        </div>
+        <div class="fila">
+          <input type="email" id="email" placeholder="Email" />
+          <p></p>
+        </div>
           <div class="fila">
             <input
               type="number"
