--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilo.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="responsive_landingpage.css" />
 
     <title>AZAHARA ESTETICA</title>
@@ -16,9 +17,9 @@
         <img src="./img/Azahara-icono.jpg" alt="logo" id="logo" />
         <nav id="nav" class="ocultar">
           <a href="#inicio">inicio</a>
-          <a href="#info-cards">Nosotros</a>
+          <a href="#nosotros">Nosotros</a>
           <a href="#productos" class="productos">Productos</a>
-          <a href="#contacto">Shop</a>
+          <a href="#shop-container">Shop</a>
           <a href="#servicios" class="servicios">Servicios</a>
           <a href="#contacto">Contacto</a>
           <a href="#news" class="news">Novedades!</a>
@@ -37,7 +38,7 @@
         <img src="./img/burguer-icon.png" alt="menu" id="burguer-menu" />
       </header>
       <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5492644038158">
+        <a href="https://api.whatsapp.com/send?phone=5492645754772">
           <img src="./img/WhatsApp-Logo.svg" alt="logo-wsp" id="wsp-img" />
         </a>
       </div>
@@ -181,20 +182,18 @@
           </div>
         </div>
         <form action="" class="formulario" id="form">
-          <div class="fila1">
-            <div class="col">
-              <input type="text" id="nombre" placeholder="Nombre" />
-              <p></p>
-            </div>
-            <div class="col">
-              <input type="text" id="apellido" placeholder="Apellido" />
-              <p></p>
-            </div>
-          </div>
           <div class="fila">
-            <input type="email" id="email" placeholder="Email" />
+            <input type="text" id="nombre" placeholder="Nombre" />
             <p></p>
-          </div>
+        </div>
+        <div class="fila">
+            <input type="text" id="apellido" placeholder="Apellido" />
+            <p></p>
+        </div>
+        <div class="fila">
+          <input type="email" id="email" placeholder="Email" />
+          <p></p>
+        </div>
           <div class="fila">
             <input
               type="number"
@@ -240,7 +239,7 @@
     <footer>
       <div class="info">
         <p>
-          2023 - <span class="txtRojo">AZAHARA</span> Todos los derechos
+          2023 - <span class="txtRojo">AZAHARA</span> <br> Todos los derechos
           reservados
         </p>
       </div>
